--- a/MusicNotesEditor/Views/MusicEditorPage.xaml
+++ b/MusicNotesEditor/Views/MusicEditorPage.xaml
@@ -8,9 +8,37 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MusicEditorPage">
-    <Grid>
-        <StackPanel>
-            <ManufakturaControls:NoteViewer x:Name="noteViewer" HorizontalAlignment="Stretch" Margin="10,10,0,0" VerticalAlignment="Top" ScoreSource="{Binding Data}"/>
-        </StackPanel>
+
+    <Grid x:Name="mainGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0"
+               HorizontalAlignment="Stretch"
+               VerticalAlignment="Center"
+               Padding="30"
+               Background="Gray"
+               Text="Top Bar"/>
+
+        <ScrollViewer Grid.Row="1"
+                  VerticalScrollBarVisibility="Auto"
+                  Margin="0,10,0,0">
+            
+            <ManufakturaControls:NoteViewer
+            x:Name="noteViewer" 
+            Margin="30"
+            Padding="15,120,15,20"
+            BorderThickness="1"
+            BorderBrush="Black"
+            IsMusicPaperMode="True"
+            RenderingMode="SinglePage"
+            CurrentPage="1"
+            ZoomFactor="1.25"
+            ScoreSource="{Binding Data}"/>
+        </ScrollViewer>
+
     </Grid>
+
 </Page>
