--- a/MusicNotesEditor/Views/MusicEditorPage.xaml
+++ b/MusicNotesEditor/Views/MusicEditorPage.xaml
@@ -9,24 +9,110 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MusicEditorPage">
 
-    <Grid x:Name="mainGrid">
+    <Grid x:Name="mainGrid" Background="{StaticResource BrushMedium}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0"
-               HorizontalAlignment="Stretch"
+
+        <Grid Grid.Row="0" Background="{StaticResource BrushDark}" Height="50">
+            <Grid.ColumnDefinitions>  
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <ToolBarTray Grid.Column="0"
+                         VerticalAlignment="Center" 
+                         Background="Transparent">
+                <ToolBar Background="Transparent" 
+                    BorderThickness="0"
+                    FontFamily="{StaticResource Polihymnia}"
+                    FontSize="24"
+                    Padding="10 0 10 0"
+                    >
+                    <ToolBar.Resources>
+                        <Style x:Key="ToolBarButtonStyle" TargetType="ToggleButton">
+                            <Setter Property="MaxHeight" Value="36"/>
+                            <Setter Property="MinWidth" Value="30"/>
+                            <Setter Property="VerticalAlignment" Value="Top"/>
+                            <Setter Property="Background" Value="{StaticResource BrushLight}"/>
+                            <Setter Property="BorderBrush" Value="Black"/>
+                            <Setter Property="BorderThickness" Value="1"/>
+                            <Setter Property="Margin" Value="4 0 0 0"/>
+                            <Setter Property="Padding" Value="0 4 0 0"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ToggleButton">
+                                        <Border x:Name="border"
+                                        Background="{TemplateBinding Background}"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        >
+                                            <ContentPresenter HorizontalAlignment="Center"
+                                                VerticalAlignment="Center"
+                                                Content="{TemplateBinding Content}"
+                                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                Margin="{TemplateBinding Padding}"/>
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <!-- Hover -->
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="border" Property="Background" Value="{StaticResource BrushLightest}"/>
+                                                <Setter TargetName="border" Property="BorderBrush" Value="Black"/>
+                                            </Trigger>
+                                            <!-- Selected / Checked -->
+                                            <Trigger Property="IsChecked" Value="True">
+                                                <Setter TargetName="border" Property="Background" Value="{StaticResource BrushPrimary}"/>
+                                                <Setter TargetName="border" Property="BorderBrush" Value="White"/>
+                                                <Setter Property="Foreground" Value="White"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ToolBar.Resources>
+                    
+                    
+                    
+                    <ToggleButton Content="u" Style="{StaticResource ToolBarButtonStyle}"/>
+                    <ToggleButton Content="t" Style="{StaticResource ToolBarButtonStyle}"/>
+                    <ToggleButton Content="s" Style="{StaticResource ToolBarButtonStyle}"/>
+                    <ToggleButton Content="e" Style="{StaticResource ToolBarButtonStyle}"/>
+                    <ToggleButton Content="q" Style="{StaticResource ToolBarButtonStyle}"/>
+                    <ToggleButton Content="h" Style="{StaticResource ToolBarButtonStyle}"/>
+                    <ToggleButton Content="w" Style="{StaticResource ToolBarButtonStyle}"/>
+
+                </ToolBar>
+            </ToolBarTray>
+
+            <TextBlock Grid.Column="1"
+               Text="My Music Editor"
+               Foreground="White"
+               FontWeight="Bold"
                VerticalAlignment="Center"
-               Padding="30"
-               Background="Gray"
-               Text="Top Bar"/>
+               HorizontalAlignment="Center"
+               FontSize="16"/>
+
+            <StackPanel Grid.Column="2"
+                        Orientation="Horizontal"
+                        VerticalAlignment="Center" 
+                        >
+                <Button Content=" Play " Margin="5" MinHeight="24"/>
+                <Button Content=" Parts " Margin="5" MinHeight="24"/>
+                <Button Content=" Settings " Margin="5" MinHeight="24"/>
+            </StackPanel>
+        </Grid>
+
 
         <ScrollViewer Grid.Row="1"
                   VerticalScrollBarVisibility="Auto"
                   Margin="0,10,0,0">
             
             <ManufakturaControls:NoteViewer
+            Background="White"
             x:Name="noteViewer" 
             Margin="30"
             Padding="15,120,15,20"
