--- a/MusicNotesEditor/Views/FileArrangerWindow.xaml
+++ b/MusicNotesEditor/Views/FileArrangerWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Arrange Files - Reorder PDF Pages and Images"
-        Height="600" Width="800"
+        Height="600" Width="900"
         WindowStartupLocation="CenterOwner">
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -34,12 +34,34 @@
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Order" Width="60" DisplayMemberBinding="{Binding Order}"/>
+					<GridViewColumn Header="Preview" Width="80">
+						<GridViewColumn.CellTemplate>
+							<DataTemplate>
+								<Button Click="PreviewButton_Click"
+										Background="Transparent"
+										BorderThickness="0"
+										Padding="2"
+										ToolTip="Click to preview this file"
+										Cursor="Hand">
+									<Button.Content>
+										<Image Source="{Binding Thumbnail}"
+											   Width="60"
+											   Height="45"
+											   Stretch="Uniform"
+											   HorizontalAlignment="Center"
+											   VerticalAlignment="Center"/>
+									</Button.Content>
+								</Button>
+							</DataTemplate>
+						</GridViewColumn.CellTemplate>
+					</GridViewColumn>
                     <GridViewColumn Header="File Name" Width="200" DisplayMemberBinding="{Binding FileName}"/>
                     <GridViewColumn Header="Type" Width="100" DisplayMemberBinding="{Binding FileType}"/>
                     <GridViewColumn Header="Size" Width="80" DisplayMemberBinding="{Binding FileSize}"/>
                     <GridViewColumn Header="Path" Width="300" DisplayMemberBinding="{Binding FilePath}"/>
                 </GridView>
             </ListView.View>
+
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_PreviewMouseLeftButtonDown"/>
