--- a/MusicNotesEditor/Views/FileArrangerPage.xaml
+++ b/MusicNotesEditor/Views/FileArrangerPage.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Title="Arrange Files - Reorder PDF Pages and Images">
-	<Grid Margin="10">
+    <Grid Background="#FF353242">
 		<!-- Copy the entire Grid content from FileArrangerWindow.xaml here -->
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
@@ -33,12 +33,12 @@
 		<!-- File List -->
 		<ListView x:Name="filesListView" Grid.Row="1"
                   AllowDrop="True"
+                  Background="#FF131020"
                   PreviewDragOver="FilesListView_PreviewDragOver"
                   Drop="FilesListView_Drop">
 			<ListView.View>
-				<GridView>
-					<!-- Preview Column -->
-					<GridViewColumn Header="Preview" Width="80">
+                <GridView>
+                    <GridViewColumn Header="Preview" Width="80">
 						<GridViewColumn.CellTemplate>
 							<DataTemplate>
 								<Button Click="PreviewButton_Click"
@@ -60,7 +60,7 @@
 						</GridViewColumn.CellTemplate>
 					</GridViewColumn>
 
-					<GridViewColumn Header="Order" Width="60" DisplayMemberBinding="{Binding Order}"/>
+                    <GridViewColumn Header="Order" Width="60" DisplayMemberBinding="{Binding Order}"/>
 					<GridViewColumn Header="File Name" Width="200" DisplayMemberBinding="{Binding FileName}"/>
 					<GridViewColumn Header="Type" Width="100" DisplayMemberBinding="{Binding FileType}"/>
 					<GridViewColumn Header="Size" Width="80" DisplayMemberBinding="{Binding FileSize}"/>
