--- a/MusicNotesEditor/MainWindow.xaml
+++ b/MusicNotesEditor/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStyle="SingleBorderWindow"
         ResizeMode="CanResize"
-        
+        SizeChanged="Window_SizeChanged"
         Background="#2D2D30"
         Height="600" 
         Width="900">
