Responsive Main Menu is completed

--- a/MusicNotesEditor/Views/MainMenuPage.xaml
+++ b/MusicNotesEditor/Views/MainMenuPage.xaml
@@ -7,11 +7,13 @@
       xmlns:svg="http://sharpvectors.codeplex.com/svgc/"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainMenuPage">
+      Title="MainMenuPage"
+      FontFamily="{StaticResource BeVietnam}">
+
 
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="/Assets/background.png"/>
+            <ImageBrush ImageSource="/Assets/background.png" Stretch="UniformToFill"/>
         </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.2*"/>
@@ -25,129 +27,233 @@
             <RowDefinition Height="0.15*"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Column="1" Grid.Row="1" BorderBrush="#FF2f2e3a" BorderThickness="3" CornerRadius="8">
+        <!-- ViewBox wraps the entire Border -->
+        <Viewbox Grid.Column="1" Grid.Row="1" Stretch="Uniform">
+            <Border 
+                Width="675"
+                Height="450"
+                BorderBrush="#FF2f2e3a" 
+                Background="#FF131020"
+                BorderThickness="3"
+                CornerRadius="8"
+                Padding="20">
 
-            <Grid Background="#FF131020">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="0.3*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="0.15*"/>
-                </Grid.RowDefinitions>
-
-                <TextBlock 
-                    Grid.Row="0"  
-                    FontSize="50" 
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Foreground="White">
-                    ORPHEUS
-                </TextBlock>
-
-                <Grid Grid.Row="1" Background="#131020">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
+                <Grid>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="0.3*"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="0.15*"/>
                     </Grid.RowDefinitions>
 
-                    <Border Grid.Column="0"
-                        Grid.Row="0"
-                        Margin="30"
-                        BorderBrush="#FF292834"
-                        BorderThickness="2"
-                        CornerRadius="8">
-                        <Button
-                            Name="goToMusicEditorButton"
-                            Click="GoToMusicEditorPage"
-                            Background="#FF1b182b"
-                            Width="auto"
-                            Height="auto"
-                            HorizontalContentAlignment="Stretch"
-                            VerticalContentAlignment="Stretch"
-                            Margin="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
+                    <!-- Title -->
+                    <TextBlock 
+                        Grid.Row="0"  
+                        FontSize="50" 
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Foreground="White"
+                        Text="ORPHEUS">
+                    </TextBlock>
 
-                                <Image 
-                                    Grid.Column="0" 
-                                    Source="/Assets/music.png">
-                                </Image>
+                    <Grid Grid.Row="1" Background="#131020">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
 
-                                <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <!-- Create New Project Button -->
+                        <Border Grid.Column="0" Grid.Row="0" 
+                                Margin="15"
+                                BorderBrush="#FF292834" 
+                                BorderThickness="2" 
+                                CornerRadius="8">
+                            <Button Margin="0" Name="goToMusicEditorButton" Click="GoToMusicEditorPage" Background="#FF1b182b" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                                <Grid Margin="15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="70"/>
+                                        <!-- Fixed width for image -->
+                                        <ColumnDefinition Width="240"/>
+                                        <!-- Flexible for text -->
+                                    </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*"/>
                                         <RowDefinition Height="*"/>
                                     </Grid.RowDefinitions>
 
-                                    <TextBlock Grid.Row="0">
-                                        Create a New Project
-                                    </TextBlock>
+                                    <Image Grid.Column="0" Grid.RowSpan="2" 
+                                           Source="/Assets/music.png" 
+                                           Width="60"
+                                           Height="60"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" 
+                                               Text="Create a New Project" 
+                                               Foreground="White" 
+                                               FontSize="16"
+                                               FontWeight="Bold" 
+                                               VerticalAlignment="Bottom" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,0,0,2"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" 
+                                               Text="Start from scratch" 
+                                               Foreground="LightGray" 
+                                               FontSize="12"
+                                               VerticalAlignment="Top" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,2,0,0"/>
                                 </Grid>
-                            </Grid>
-                        </Button>
-                    </Border>
+                            </Button>
+                        </Border>
 
-                    <Border Grid.Column="0"
-                        Grid.Row="1"
-                        Margin="30"
-                        BorderBrush="#FF292834"
-                        BorderThickness="2"
-                        CornerRadius="8">
-                        <Button
-                            Name="loadImagesButton"
-                            Click="SelectImageFiles"
-                            Background="#FF1b182b"
-                            Width="auto"
-                            Height="auto"
-                            Margin="0">
-                            Generate from Images / PDFs (OMR)
-                        </Button>
-                    </Border>
+                        <!-- Generate from Images / PDFs Button -->
+                        <Border Grid.Column="0" Grid.Row="1" 
+                                Margin="15"
+                                BorderBrush="#FF292834" 
+                                BorderThickness="2" 
+                                CornerRadius="8">
+                            <Button Margin="0" Name="loadImagesButton" Click="SelectImageFiles" Background="#FF1b182b" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                                <Grid Margin="15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="70"/>
+                                        <!-- Fixed width for image -->
+                                        <ColumnDefinition Width="240"/>
+                                        <!-- Flexible for text -->
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
 
-                    <Border Grid.Column="1"
-                        Grid.Row="0"
-                        Margin="30"
-                        BorderBrush="#FF292834"
-                        BorderThickness="2"
-                        CornerRadius="8">
-                        <Button
-                            Name="loadMusicXMLButton"
-                            Click="SelectMusicXMLFile"
-                            Background="#FF1b182b"
-                            Width="auto"
-                            Height="auto"
-                            Margin="0">
-                            Open Project
-                        </Button>
-                    </Border>
+                                    <Image Grid.Column="0" Grid.RowSpan="2" 
+                                           Source="/Assets/scan.png" 
+                                           Width="60"
+                                           Height="60"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" 
+                                               Text="Generate from Images" 
+                                               Foreground="White" 
+                                               FontSize="16"
+                                               FontWeight="Bold" 
+                                               VerticalAlignment="Bottom" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,0,0,2"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" 
+                                               Text="Images / PDFs (OMR)" 
+                                               Foreground="LightGray" 
+                                               FontSize="12"
+                                               VerticalAlignment="Top" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,2,0,0"/>
+                                </Grid>
+                            </Button>
+                        </Border>
 
-                    <Border Grid.Column="1"
-                        Grid.Row="1"
-                        Margin="30"
-                        BorderBrush="#FF292834"
-                        BorderThickness="2"
-                        CornerRadius="8">
-                        <Button
-                            Name="settingsButton"
-                            Click="OpenSettings" 
-                            Background="#FF1b182b"
-                            Width="auto"
-                            Height="auto"
-                            Margin="0">
-                            Settings
-                        </Button>
-                    </Border>
+                        <!-- Open Project Button -->
+                        <Border Grid.Column="1" Grid.Row="0" 
+                                Margin="15"
+                                BorderBrush="#FF292834" 
+                                BorderThickness="2" 
+                                CornerRadius="8">
+                            <Button Margin="0" Name="loadMusicXMLButton" Click="SelectMusicXMLFile" Background="#FF1b182b" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                                <Grid Margin="15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="70"/>
+                                        <!-- Fixed width for image -->
+                                        <ColumnDefinition Width="240"/>
+                                        <!-- Flexible for text -->
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+
+                                    <Image Grid.Column="0" Grid.RowSpan="2" 
+                                           Source="/Assets/import.png" 
+                                           Width="60"
+                                           Height="60"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" 
+                                               Text="Open Project" 
+                                               Foreground="White" 
+                                               FontSize="16"
+                                               FontWeight="Bold" 
+                                               VerticalAlignment="Bottom" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,0,0,2"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" 
+                                               Text="Load existing project" 
+                                               Foreground="LightGray" 
+                                               FontSize="12"
+                                               VerticalAlignment="Top" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,2,0,0"/>
+                                </Grid>
+                            </Button>
+                        </Border>
+
+                        <!-- Settings Button -->
+                        <Border Grid.Column="1" Grid.Row="1" 
+                                Margin="15"
+                                BorderBrush="#FF292834" 
+                                BorderThickness="2" 
+                                CornerRadius="8">
+                            <Button Margin="0" Name="settingsButton" Click="OpenSettings" Background="#FF1b182b" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+                                <Grid Margin="15">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="70"/>
+                                        <!-- Fixed width for image -->
+                                        <ColumnDefinition Width="240"/>
+                                        <!-- Flexible for text -->
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+
+                                    <Image Grid.Column="0" Grid.RowSpan="2" 
+                                           Source="/Assets/settings.png" 
+                                           Width="60"
+                                           Height="60"
+                                           VerticalAlignment="Center"
+                                           HorizontalAlignment="Left"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="0" 
+                                               Text="Settings" 
+                                               Foreground="White" 
+                                               FontSize="16"
+                                               FontWeight="Bold" 
+                                               VerticalAlignment="Bottom" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,0,0,2"/>
+                                    <TextBlock Grid.Column="1" Grid.Row="1" 
+                                               Text="Configure application" 
+                                               Foreground="LightGray" 
+                                               FontSize="12"
+                                               VerticalAlignment="Top" 
+                                               HorizontalAlignment="Left"
+                                               Margin="5,2,0,0"/>
+                                </Grid>
+                            </Button>
+                        </Border>
+                    </Grid>
+
+                    <!-- Footer -->
+                    <TextBlock 
+                        Grid.Row="2"  
+                        FontSize="11" 
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Bottom"
+                        Foreground="White"
+                        Text="v.0.5.5 2025">
+                    </TextBlock>
                 </Grid>
-
-            </Grid>
-            
-        </Border>
+            </Border>
+        </Viewbox>
     </Grid>
 </Page>
