--- a/MusicNotesEditor/Styles/Fonts.xaml
+++ b/MusicNotesEditor/Styles/Fonts.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <FontFamily x:Key="Polihymnia">pack://application:,,,/Assets/#Polihymnia</FontFamily>
+    <FontFamily x:Key="BeVietnam">pack://application:,,,/Assets/#BeVietnamPro</FontFamily>
 </ResourceDictionary>
