--- a/MusicNotesEditor/Views/MusicEditorPage.xaml
+++ b/MusicNotesEditor/Views/MusicEditorPage.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MusicEditorPage">
 
-    <Grid x:Name="mainGrid" Background="{StaticResource BrushLight}">
+    <Grid PreviewKeyDown="HandleKeyDown" x:Name="mainGrid" Background="{StaticResource BrushLight}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -104,18 +104,18 @@
                   Margin="0,10,0,0">
 
             <ManufakturaControls:NoteViewer
-            Background="White"
-            x:Name="noteViewer" 
-            Margin="30"
-            Padding="100,120,15,40"
-            BorderThickness="1"
-            BorderBrush="Black"
-            IsMusicPaperMode="True"
-            RenderingMode="SinglePage"
-            CurrentPage="1"
-            ZoomFactor="1.25"
-            ScoreSource="{Binding Data}" 
-            Loaded="NoteViewer_Loaded"
+                Background="White"
+                x:Name="noteViewer" 
+                Margin="30"
+                Padding="100,120,15,40"
+                BorderThickness="1"
+                BorderBrush="Black"
+                IsSelectable="False"
+                RenderingMode="SinglePage"
+                CurrentPage="1"
+                ZoomFactor="1.25"
+                ScoreSource="{Binding Data}" 
+                Loaded="NoteViewer_Loaded"
             />
         </ScrollViewer>
 
